src/test/ui/dropck/dropck-eyepatch.stderr
error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch.rs:81:20
   |
LL |     dt = Dt("dt", &c);
   |                    ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c` does not live long enough
  --> $DIR/dropck-eyepatch.rs:83:20
   |
LL |     dr = Dr("dr", &c);
   |                    ^ borrowed value does not live long enough
...
LL | }
   | - `c` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch.rs:87:20
   |
LL |     dt = Dt("dt", &c_shortest);
   |                    ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `c_shortest` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch.rs:89:20
   |
LL |     dr = Dr("dr", &c_shortest);
   |                    ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `c_shortest` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch.rs:98:29
   |
LL |     pt = Pt("pt", &c_long, &c_shortest);
   |                             ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `c_shortest` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `c_shortest` does not live long enough
  --> $DIR/dropck-eyepatch.rs:100:29
   |
LL |     pr = Pr("pr", &c_long, &c_shortest);
   |                             ^^^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `c_shortest` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0597`.
